--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.9",
     "nodemon": "^2.0.7",
-    "razorpay": "^2.0.6"
+    "razorpay": "^2.0.6",
+    "shortid": "^2.2.16"
   }
 }
